--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,4 +7,221 @@
 
 body {
   font-family: britanica;
+  background-color: #CAFFD0;
+}
+
+// Homepage 
+.homepage {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+}
+
+.name-title-email {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+}
+
+.nat {
+  line-height: 0.75;
+  font-size: 170px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-family: Britanica;
+}
+
+.title-email {
+  font-family: Britanica;
+  font-size:100px;
+  line-height: 0.85;
+  margin-top: 0;
+  margin-bottom: 75px;
+}
+
+.footer {
+display: flex;
+flex-direction: row;
+margin-bottom: 10px;
+}
+
+.web-design-dev {
+font-size: 20px;
+margin-right: 5px;
+}
+
+.peace {
+  width: 15px;
+  height: 21px;
+  margin-top: 23px;
+  margin-left: 3px;
+}
+
+// About 
+.about-section {
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
+  margin-left: 30px;
+  margin-top: 0;
+}
+
+.about-me {
+  width: 60vw;
+  display: flex;
+  flex-direction: row;
+}
+
+#about-back {
+  width: 130px;
+  height: 130px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+#about-back-text {
+  margin-top: 14px;
+  margin-right: 0px;
+  margin-left: 160px;
+}
+
+.about-me-info {
+  font-size: 58px;
+  line-height: 0.90;
+  margin-top: 25px;
+}
+
+.profile-pic {
+  width: 25vw;
+  position: absolute;
+  margin-left: 550px;
+  margin-top: 170px;
+  z-index: -2;
+}
+
+.about-email {
+  display: flex;
+  flex-direction: row;
+  width: 60vw;
+  position: fixed;
+  bottom: 50px;
+  font-size: 58px;
+}
+
+.skills {
+  display: flex;
+  flex-direction: row;
+  width: 70vw;
+  position: fixed;
+  bottom: 0px;
+}
+
+.i {
+  width: 50px;
+}
+
+// Projects
+.project-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 30px;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  width: 60vw;
+}
+
+.back-button {
+  border: none;
+  font-size: 120px;
+  background: none;
+  margin-top: 7px;
+  margin-left: 20px;
+  margin-bottom: 0px;
+}
+
+#web-back {
+  margin-left:342px;
+}
+
+.projects {
+  font-size: 120px;
+  font-family: Britanica;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.individual-project {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-title {
+  font-size: 80px;
+  font-family: Britanica;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+#city-title {
+  margin-bottom: 4px;
+}
+
+.project-img {
+  width: 60vw;
+}
+
+.project-description {
+  width: 60vw;
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+
+.tech-used {
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  font-family: Britanica;
+  margin-bottom: 0px;
+  margin-top: 20px;
+}
+
+.tech-list {
+  display: flex;
+  flex-direction: row;
+  margin-top: -10px;
+}
+
+.project-links {
+  display: flex;
+  flex-direction: column;
+}
+
+#project-web-link {
+  font-size: 25px;
+  font-family: Britanica;
+}
+
+#project-git-link {
+  font-size: 25px;
+}
+
+#pixel-title {
+  margin-bottom: 4px;
+}
+
+#samsung-title {
+  margin-bottom: 4px;
+}
+
+#ad-back {
+  margin-left: 230px;
+}
+
+#famous-five {
+  margin-bottom: 4px;
 }
