on click navbar change color

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -45,7 +45,6 @@ body {
 
 .dark {
   background-color: black !important;
-  color: white !important;
 }
 
 #about-nav-button {
@@ -80,7 +79,13 @@ a:visited {
   font-size: 70px;
   font-family: britanica;
   width: inherit;
+  color: black;
 }
+
+.click {
+  color: #CAFFD0;
+}
+
 }
 
 // Homepage 
@@ -512,6 +517,13 @@ margin-right: 5px;
   
   .nav-text {
     font-size: 20px;
+  }
+
+.dark {
+  background-color: black;
+}
+  .click {
+    color: #CAFFD0;
   }
   }
 
