mobile hp text adjustment

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -519,15 +519,81 @@ margin-right: 5px;
     font-size: 20px;
   }
 
-.dark {
+  .dark {
   background-color: black;
-}
+  }
   .click {
     color: #CAFFD0;
   }
+
+  .nat {
+    font-size: 50px !important;
+  }
+
+  .title-email {
+    font-size: 40px !important;
+  }
+
+  .web-design-dev {
+    font-size: 10px !important;
+    }
+
+  .about-me-info {
+    font-size: 60px !important;
+  }
+
+  .back-button {
+    font-size: 110px !important;
+  }
+
+  #about-back-text {
+    margin-left: 65px !important;
+  }
+
+  .about-email {
+    font-size: 60px !important;
+  }
+
+  .skills {
+    font-size: 15px !important;
+  }
+
+  #web-back {
+    margin-left: 168px !important;
+  }
+
+  #ad-back {
+    margin-left: 65px !important;
+  }
+
+  .projects {
+    font-size: 110px !important;
+  }
+
+  .project-title {
+    font-size: 70px !important;
+  }
+
+  .project-description {
+    font-size: 17px !important;
+  }
+
+  .tech-used {
+    font-size: 22px !important;
+  }
+
+  .tech-list {
+    font-size: 15px !important;
+  }
+
+  #project-web-link {
+    font-size: 22px !important;
+  }
+
+  #project-git-link {
+    font-size: 22px !important;
+  }
+
   }
 
 
-
-// MOBILE MEDIA QUERIES:
-// @media only screen and (min-width: 360px) and (max-width: 1280px) {}
