--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -74,7 +74,7 @@ a:visited {
 
 .nav-text{
   transform: rotate(270deg);
-  margin-top: 82vh;
+  margin-top: 80vh;
   font-size: 70px;
   font-family: britanica;
   width: inherit;
@@ -118,7 +118,8 @@ a:visited {
 .footer {
 display: flex;
 flex-direction: row;
-margin-bottom: 1vh;
+position: fixed;
+bottom: 0px;
 }
 
 .web-design-dev {
@@ -322,6 +323,13 @@ margin-right: 5px;
   .web-design-dev {
     font-size: 30px !important;
     }
+
+    .peace {
+      width: 22px;
+      height: 28px;
+      margin-top: 36px;
+      margin-left: 5px;
+    }
   
   .about-me-info {
     font-size: 90px !important;
@@ -387,11 +395,6 @@ margin-right: 5px;
     font-size: 35px !important;
   }
 
-
-
-
-
-
 }
 
 // MEDIA QUERY DONE
@@ -414,6 +417,13 @@ margin-right: 5px;
 
 .web-design-dev {
   font-size: 30px !important;
+  }
+
+  .peace {
+    width: 22px;
+    height: 28px;
+    margin-top: 36px;
+    margin-left: 5px;
   }
 
 .about-me-info {
@@ -488,7 +498,7 @@ margin-right: 5px;
   }
 
   .nav-text {
-    font-size: 90px !important;
+    font-size: 70px !important;
    }
 
   .nat {
@@ -743,11 +753,11 @@ margin-right: 5px;
   }
 
   .nat {
-    font-size: 170px !important;
+    font-size: 150px !important;
   }
   
   .title-email {
-    font-size: 100px !important;
+    font-size: 80px !important;
   }
   
   .about-me-info {
@@ -909,11 +919,11 @@ margin-right: 5px;
    }
   
   .nat {
-    font-size: 150px !important;
+    font-size: 130px !important;
   }
   
   .title-email {
-    font-size: 90px !important;
+    font-size: 70px !important;
   }
   
   .about-me-info {
